<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>SOEM</name>
  <version>1.4.0</version>
  <description>Simple Open Source EtherCAT Master</description>
  <maintainer email="openethercatsociety@rt-labs.com">rt-labs</maintainer>
  <license>GPLv2 with linking exception</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
